working further on org file

--- a/templates/organization.html
+++ b/templates/organization.html
@@ -1,16 +1,17 @@
-<!doctype html>
-<title>{{data.name}} - Intercept</title>
+{% extends "layout.html" %}
+{% block body %}
 
 <div>
-	<div id="profile-pic">
-		<img src="/content/images/test.png">
+	<div>
+		<img src="../static/images/test.png" id="profile-pic">
 	</div>
-	<div><
+	<div>
 		<p>{{data.name}}</p>
 		<p>{{data.mission_statement}}</p>
-		<p><span class="bold">Location</span> {{data.location.city}}, {{data.location.state}}</p>
+		<p><span class="bold">Location</span> {{data.contact_info.location.city}}, {{data.contact_info.location.state}}</p>
 	</div>
 	<div>
 			Test test test
 	</div>
 </div>
+{% endblock %}
